--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav {
 
 .hero {
   padding: 60px 30px 20px;
-  height: 100vh;
+  height: 110vh;
   background-image: url(images/mobile-bg.png);
   background-size: cover;
   color: white;
@@ -290,6 +290,7 @@ nav {
   font-weight: 500;
   text-align: center;
   font-size: 32px;
+  margin-bottom: 30px;
 }
 
 .gallery-images {
