--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   position: relative;
   font-family: "Playfair Display", sans-serif;
+  background-color: #3a2612;
 
   /* font-family: Times, serif; */
   /* font-optical-sizing: auto; */
