--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
   position: relative;
   font-family: "Playfair Display", sans-serif;
   background-color: #3a2612;
+  margin-block: 0;
+  padding-block: 0;
 
   /* font-family: Times, serif; */
   /* font-optical-sizing: auto; */
